// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlossaryComponent matches snapshot 1`] = `
<div
  className="tm-glossary"
>
  <div
    aria-describedby="glossary-title"
    aria-hidden={false}
    className="glossary glossary-visible"
    id="glossary"
  >
    <button
      className="glossary-close"
      onClick={[Function]}
      title="Close glossary"
    >
      <FontAwesome
        name="times"
      />
      <span
        className="usa-sr-only"
      >
        Close Glossary
      </span>
    </button>
    <div
      className="glossary-content-container"
    >
      <h3
        id="glossary-title"
      >
        Glossary
      </h3>
      <div>
        <GlossarySearch
          changeText={[Function]}
          searchTextValue=""
        />
        <div
          className="glossary-content"
        >
          <GlossaryComponent
            glossaryItems={
              Array [
                Object {
                  "definition": "The employee responsible for filling the position.",
                  "id": 2,
                  "title": "Assignment Officer (AO)",
                },
                Object {
                  "definition": "An employee who is applying for a position.",
                  "id": 3,
                  "title": "Bidder",
                },
                Object {
                  "definition": "A secure text-based message sent from one State department location to another.",
                  "id": 4,
                  "title": "Cable",
                },
                Object {
                  "definition": "The organization sponsoring a position. Most bureaus oversee regional areas, such as Western Europe. Others, such as the Bureau of Consular Affairs, oversee functional groups. If referring to a regional bureau, include the acronym -- State Department employees often use acronyms to refer to regional bureaus. In UI copy, put the acronym before the full name, eg: (WHA) Bureau of Western Hemispheric Affairs.",
                  "id": 5,
                  "title": "Bureau",
                },
                Object {
                  "definition": "An employee responsible for helping others find and successfully bid for appropriate positions for their career goals.",
                  "id": 6,
                  "title": "Career development officer (CDO)",
                },
                Object {
                  "definition": "A chosen professional competency.",
                  "id": 7,
                  "title": "Career Track",
                },
                Object {
                  "definition": "A cone is a colloquial synonym for a generalist or specialist functional field. Bids can be \\"in cone\\" (for a position whose skill code belongs to the bidders' specialization) or \\"out of cone.\\" Each cone contains multiple skill codes.",
                  "id": 8,
                  "title": "Cone",
                },
                Object {
                  "definition": "A salary increase to reimburse employees for prices at a foreign post that are higher than same costs in Washington, DC. The specific value of the allowance changes based on local prices. COLA is a colloquial shorthand for what is officially known as post allowance.",
                  "id": 9,
                  "title": "Cost of living allowance (COLA)",
                },
                Object {
                  "definition": "6/8",
                  "id": 10,
                  "title": "6/8",
                },
              ]
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GlossaryComponent matches snapshot when visible is false 1`] = `
<div
  className="tm-glossary"
>
  <div
    aria-describedby="glossary-title"
    aria-hidden={true}
    className="glossary glossary-hidden"
    id="glossary"
  >
    <button
      className="glossary-close"
      onClick={[Function]}
      title="Close glossary"
    >
      <FontAwesome
        name="times"
      />
      <span
        className="usa-sr-only"
      >
        Close Glossary
      </span>
    </button>
    <div
      className="glossary-content-container"
    >
      <h3
        id="glossary-title"
      >
        Glossary
      </h3>
      <div>
        <GlossarySearch
          changeText={[Function]}
          searchTextValue=""
        />
        <div
          className="glossary-content"
        >
          <GlossaryComponent
            glossaryItems={
              Array [
                Object {
                  "definition": "The employee responsible for filling the position.",
                  "id": 2,
                  "title": "Assignment Officer (AO)",
                },
                Object {
                  "definition": "An employee who is applying for a position.",
                  "id": 3,
                  "title": "Bidder",
                },
                Object {
                  "definition": "A secure text-based message sent from one State department location to another.",
                  "id": 4,
                  "title": "Cable",
                },
                Object {
                  "definition": "The organization sponsoring a position. Most bureaus oversee regional areas, such as Western Europe. Others, such as the Bureau of Consular Affairs, oversee functional groups. If referring to a regional bureau, include the acronym -- State Department employees often use acronyms to refer to regional bureaus. In UI copy, put the acronym before the full name, eg: (WHA) Bureau of Western Hemispheric Affairs.",
                  "id": 5,
                  "title": "Bureau",
                },
                Object {
                  "definition": "An employee responsible for helping others find and successfully bid for appropriate positions for their career goals.",
                  "id": 6,
                  "title": "Career development officer (CDO)",
                },
                Object {
                  "definition": "A chosen professional competency.",
                  "id": 7,
                  "title": "Career Track",
                },
                Object {
                  "definition": "A cone is a colloquial synonym for a generalist or specialist functional field. Bids can be \\"in cone\\" (for a position whose skill code belongs to the bidders' specialization) or \\"out of cone.\\" Each cone contains multiple skill codes.",
                  "id": 8,
                  "title": "Cone",
                },
                Object {
                  "definition": "A salary increase to reimburse employees for prices at a foreign post that are higher than same costs in Washington, DC. The specific value of the allowance changes based on local prices. COLA is a colloquial shorthand for what is officially known as post allowance.",
                  "id": 9,
                  "title": "Cost of living allowance (COLA)",
                },
                Object {
                  "definition": "6/8",
                  "id": 10,
                  "title": "6/8",
                },
              ]
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
